WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307306
AX: hasAccNameAttribute doesn't validate aria-labelledby ID references, causing incorrect role computation
https://bugs.webkit.org/show_bug.cgi?id=307306
Summary
AX: hasAccNameAttribute doesn't validate aria-labelledby ID references, causi...
Tyler Wilcock
Reported
2026-02-08 18:06:55 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-08 18:07:01 PST
<
rdar://problem/169935334
>
Tyler Wilcock
Comment 2
2026-02-08 18:12:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58167
EWS
Comment 3
2026-02-24 22:21:36 PST
Committed
308183@main
(b0b7fd4bdd3a): <
https://commits.webkit.org/308183@main
> Reviewed commits have been landed. Closing PR #58167 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug