AX: hasAccNameAttribute doesn't validate aria-labelledby ID references, causing incorrect role computation https://bugs.webkit.org/show_bug.cgi?id=307306 rdar://169935334

Reviewed by Joshua Hoffman.

This commit updates hasAccNameAttribute() to validate that aria-labelledby and
aria-describedby actually reference existing elements with non-empty
text content. Previously, the function would return true for any
non-empty aria-labelledby value, even if it referenced non-existing
IDs, empty elements, or elements with only whitespace.

This ensures that elements like <section> and <aside> (which require
an accessible name to be exposed as landmarks) don't incorrectly get
landmark roles when aria-labelledby references invalid or empty
content. Also validates that title attributes with only whitespace
are not considered valid accessible names.

* LayoutTests/imported/w3c/web-platform-tests/html-aam/roles-contextual-expected.txt:
* Source/WebCore/accessibility/AXUtilities.cpp:
(WebCore::hasAccNameAttribute):

Canonical link: https://commits.webkit.org/308183@main