Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -1361,7 +1361,6 @@ bool AccessibilityRenderObject::computeIsIgnored() const
 
         // First check the RenderImage's altText (which can be set through a style sheet, or come from the Element).
         // However, if this is not a native image, fallback to the attribute on the Element.
-        // If the image is decorative (i.e. alt=""), it should be ignored even if a title, aria-label, etc. is supplied.
         AccessibilityObjectInclusion altTextInclusion = AccessibilityObjectInclusion::DefaultBehavior;
         WeakPtr image = dynamicDowncast<RenderImage>(*m_renderer);
         if (image)
@@ -1369,15 +1368,21 @@ bool AccessibilityRenderObject::computeIsIgnored() const
         else
             altTextInclusion = objectInclusionFromAltText(altTextFromAttributeOrStyle());
 
-        if (altTextInclusion == AccessibilityObjectInclusion::IgnoreObject)
-            return true;
         if (altTextInclusion == AccessibilityObjectInclusion::IncludeObject)
             return false;
 
-        // webkit.org/b/173870 - If an image has other alternative text, don't ignore it if alt text is empty.
-        // This means we should process title and aria-label first.
+        // Per HTML-AAM, aria-label and valid aria-labelledby (referencing elements with
+        // non-empty text) take precedence over alt="", so check for valid ARIA accname
+        // before ignoring the image due to empty alt text.
+        // Note: we intentionally only check ARIA attributes here and not the title attribute,
+        // because per HTML-AAM, title does not override alt="" for images.
+        if (RefPtr imageElement = dynamicDowncast<Element>(node.get()); imageElement && hasARIAAccNameAttribute(*imageElement))
+            return false;
 
-        // If an image has an accname, accessibility should be lenient and allow it to appear in the hierarchy (according to WAI-ARIA).
+        if (altTextInclusion == AccessibilityObjectInclusion::IgnoreObject)
+            return true;
+
+        // If an image has an accname (including from title), it should not be ignored (according to WAI-ARIA).
         if (hasAccNameAttribute())
             return false;
 
